# cayleyrl-iclr-2026

./: .gitignore  LICENSE  README.md  generate_datasets.py  lint.sh  pyproject.toml
.github/workflows/: ci.yaml  deploy-docs.yaml
cayleypy/: __init__.py  bfs_result.py  bfs_result_test.py  cayley_graph.py  cayley_graph_def.py  cayley_graph_def_test.py  cayley_graph_test.py  cayley_path.py  create_graph.py  create_graph_test.py  datasets.py  datasets_test.py  graphs_lib.py  graphs_lib_test.py  hasher.py  permutation_utils.py  permutation_utils_test.py  predictor.py  predictor_test.py  string_encoder.py  string_encoder_test.py  torch_utils.py
cayleypy/algo/: __init__.py  beam_search.py  beam_search_result.py  beam_search_test.py  bfs_bitmask.py  bfs_bitmask_test.py  bfs_mitm.py  bfs_mitm_test.py  bfs_numpy.py  bfs_numpy_test.py  find_path.py  find_path_test.py  interactive_bfs.py  interactive_bfs_test.py  random_walks.py
cayleypy/data/: README.md  all_cycles_cayley_growth.csv  all_transpositions_cayley_growth.csv  block_interchange_cayley_growth.csv  burnt_pancake_cayley_growth.csv  consecutive_k_cycles_cayley_growth.csv  coxeter_cayley_growth.csv  cyclic_coxeter_cayley_growth.csv  derangements_cayley_growth.csv  down_cycles_cayley_growth.csv  full_reversals_cayley_growth.csv  globes_growth.csv  heisenberg_growth.csv  hungarian_rings_growth.csv  increasing_k_cycles_cayley_growth.csv  involutive_derangements_cayley_growth.csv  larx_cayley_growth.csv  lrx_cayley_growth.csv  lrx_coset_growth.csv  lx_cayley_growth.csv  pancake_cayley_growth.csv  puzzles_growth.csv  rapaport_m1_cayley_growth.csv  rapaport_m2_cayley_growth.csv  signed_reversals_cayley_growth.csv  sl_2_fund_roots_growth.csv  sl_2_root_weyl_growth.csv  sl_3_fund_roots_growth.csv  sl_3_root_weyl_growth.csv  stars_cayley_growth.csv  top_spin_cayley_growth.csv  top_spin_coset_growth.csv  transposons_cayley_growth.csv  wrapped_k_cycles_cayley_growth.csv
cayleypy/models/: __init__.py  models.py  models_lib.py  models_lib_test.py
cayleypy/puzzles/: __init__.py  cube.py  cube_test.py  gap_puzzles.py  gap_puzzles_test.py  globe.py  globe_test.py  hungarian_rings.py  hungarian_rings_test.py  moves.py  puzzles.py  puzzles_test.py
cayleypy/puzzles/gap_files/defaults/: 10x10x10.gap  11x11x11.gap  12x12x12.gap  13x13x13.gap  20x20x20.gap  2x2x2.gap  2x2x2_+_dino.gap  2x2x2_+_dino_+_little_chop.gap  2x2x2_+_little_chop.gap  30x30x30.gap  3x3x3.gap  40x40x40.gap  4x4x4.gap  5x5x5.gap  6x6x6.gap  7x7x7.gap  8x8x8.gap  9x9x9.gap  Christopher's_jewel.gap  Eitan's_star.gap  FTO.gap  Icosaminx.gap  Jing_pyraminx.gap  Redicosahedron.gap  Redicosahedron_with_centers.gap  Regular_Astrominx.gap  Regular_Astrominx_+_Big_Chop.gap  Trajber's_octahedron.gap  big_chop.gap  dino.gap  (+42 more)
docs/: api.rst  build_docs.sh  conf.py  index.rst
(+40 files in other folders)
